--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>JAVASCRIPT</h1>
     <button onclick="this.style.background= 'red'">Selam</button>
+
+    <button id="veri-buton">bana tıkla</button>
     <script src="main.js"></script>
   </body>
 </html>
