--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>JAVASCRIPT</h1>
+
+    <h2>Selin Atmaca</h2>
     <button onclick="this.style.background= 'red'">Selam</button>
 
     <button id="veri-buton">bana tıkla</button>
