--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>JAVASCRIPT</h1>
 
     <h2>Selin Atmaca</h2>
+    <h2>sabri</h2>
     <button onclick="this.style.background= 'red'">Selam</button>
 
     <button id="veri-buton">bana tıkla</button>
