--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h2>Selin Atmaca</h2>
     <h2>sabri</h2>
     <h3>hatice</h3>
+    <h3>miray</h3>
     <button onclick="this.style.background= 'red'">Selam</button>
 
     <button id="veri-buton">bana tıkla</button>
